erste vier Aufgaben

--- a/sammlung.md.html
+++ b/sammlung.md.html
@@ -55,7 +55,9 @@
 <li><a href="#definition-und-funktion">Definition und Funktion</a></li>
 <li><a href="#wertewandel-vs.-wertesynthese">Wertewandel vs. Wertesynthese</a><ul>
 <li><a href="#wertewandel-nach-inglehart">Wertewandel nach Inglehart</a></li>
+<li><a href="#wertesynthese-nach-klage">Wertesynthese nach Klage</a></li>
 </ul></li>
+<li><a href="#beispiele-für-wertorientierungen">Beispiele für Wertorientierungen:</a></li>
 </ul></li>
 </ul>
 </div>
@@ -303,8 +305,54 @@
 <h2 id="wertewandel-vs.-wertesynthese">Wertewandel vs. Wertesynthese</h2>
 <h3 id="wertewandel-nach-inglehart">Wertewandel nach Inglehart</h3>
 <ul>
-<li>Ablösung traditionsgebundener Werter durch Neue</li>
+<li>Ablösung traditionsgebundener Werter durch Neue -&gt; Wertesubstitution</li>
 <li>hierarchisch in bipolarem Kontinuum zwischen Materialismus und Postmaterialismus</li>
+</ul>
+<h4 id="mangelhypothese">Mangelhypothese:</h4>
+<ul>
+<li>Prioritäten reflektieren sozioökonomisches Umfeld</li>
+<li>größter subjektiver Wert sind Dinge, die zu knapp sind</li>
+</ul>
+<h4 id="sozialisationshypothese">Sozialisationshypothese:</h4>
+<ul>
+<li>Intra-individuelle Stabilität</li>
+<li>Wertvorstellungen spiegeln vorherrschende Bedingungen der Jugendzeit wider</li>
+</ul>
+<h4 id="methodik">Methodik:</h4>
+<ul>
+<li>Ra <em>nk</em> ing-Verfahren von Wertorientierungen: Inglehart-Index</li>
+<li>zwei Pole schließen sich aus -&gt; &quot;Forced choice situation&quot;</li>
+</ul>
+<h3 id="wertesynthese-nach-klage">Wertesynthese nach Klage</h3>
+<ul>
+<li>zwei unabhängige Wertgruppen:
+<ul>
+<li>Pflicht- und Akzeptanzwerte: Selbstkontrolle</li>
+<li>Selbstentfaltungswerte: Befreiung von Zwängen</li>
+</ul></li>
+<li>Wertesynthese: Beide Wertgruppen von Wertewandel betroffen. Keine exklusiven Pole -&gt; keine Verschiebung sondern Rekombination</li>
+</ul>
+<h4 id="lebenszyklus-hypothese">Lebenszyklus-Hypothese</h4>
+<ul>
+<li>Veränderungen individueller Wertorientierungen durch Anspassung an lebensphasenspezifische Rollenanforderungen möglich</li>
+</ul>
+<h4 id="methodik-1">Methodik:</h4>
+<ul>
+<li>Ra <em>t</em> ing-Verfahren: voneinander unabhängige Pflicht- und Selbstentfaltungswerte sollen nach Indikatoren einzeln hinsichtlich ihrer Wichtigkeit beurteilt werden</li>
+<li>Möglichkeit gleichrangiger Orientierung auf verschiedene Werte</li>
+</ul>
+<h2 id="beispiele-für-wertorientierungen">Beispiele für Wertorientierungen:</h2>
+<ul>
+<li>materialistisch:
+<ul>
+<li>Psychologische Grundbedürfnisse: Atmung, Trinken, Nahrung, Schlaf</li>
+<li>Sicherheit: Wohnung, Job, Gesundheit</li>
+</ul></li>
+<li>postmaterialistisch:
+<ul>
+<li>Soziale Bedürfnisse: Partnerschaft, Kommunikation, Freunde</li>
+<li>Individualbedürfnisse: Status, Macht, Karriere</li>
+</ul></li>
 </ul>
 </body>
 </html>
