--- a/sammlung.md.html
+++ b/sammlung.md.html
@@ -30,10 +30,8 @@
 <li><a href="#neuropsychologischer-ansatz">Neuropsychologischer Ansatz</a></li>
 <li><a href="#persönlichkeitspsychologische-perspektive">Persönlichkeitspsychologische Perspektive</a></li>
 </ul></li>
-<li><a href="#sozialwissenschaftliche-erklärungsansätze">Sozialwissenschaftliche Erklärungsansätze</a><ul>
-<li><a href="#sozialpsychologische-perspektive-nur-einen-lernen">Sozialpsychologische Perspektive (nur einen lernen)</a></li>
-<li><a href="#psychosoziale-perspektive----problem-behavior-theory">Psychosoziale Perspektive -- „Problem-Behavior-Theory“</a></li>
-<li><a href="#sozialisationstheoretische-perspektive">Sozialisationstheoretische Perspektive</a></li>
+<li><a href="#sozialwissenschaftliche-erklärungsansätze-nur-einen-lernen">Sozialwissenschaftliche Erklärungsansätze (nur einen lernen)</a><ul>
+<li><a href="#sozialpsychologische-perspektive">Sozialpsychologische Perspektive</a></li>
 </ul></li>
 <li><a href="#integrative-erkärungsansätze-nur-einen-lernen">Integrative Erkärungsansätze (nur einen lernen)</a><ul>
 <li><a href="#theorie-des-jugendlichen-leichtsinns">Theorie des jugendlichen Leichtsinns</a></li>
@@ -83,6 +81,13 @@
 </ul></li>
 <li><a href="#fv-10.2----väter">FV 10.2 -- Väter</a><ul>
 <li><a href="#phasen-in-der-entwicklung-der-vaterforschung-nach-fthenakis">Phasen in der Entwicklung der Vaterforschung nach Fthenakis</a></li>
+<li><a href="#sechs-offene-forschungsfragen">Sechs offene Forschungsfragen</a></li>
+<li><a href="#väterliches-engagement">Väterliches Engagement</a><ul>
+<li><a href="#forschungsergebnisse">Forschungsergebnisse</a></li>
+<li><a href="#theorieansätze">Theorieansätze</a></li>
+<li><a href="#rollentheoretische-perspektive">Rollentheoretische Perspektive</a></li>
+<li><a href="#familienzyklischer-ansatz">familienzyklischer Ansatz</a></li>
+</ul></li>
 </ul></li>
 </ul>
 </div>
@@ -129,8 +134,8 @@
 <li>geachtetes Konstrukt geschlossener biopsychosozialen Persönlichkeitstheorie</li>
 <li>Kritik: Vernachlässigung von kognitiven Aspekten, Sozialisationskontexten und leistungsthematischen Komponenten → Umgebungseinflüsse, Kritik an der Methode des SS-Tests</li>
 </ul>
-<h2 id="sozialwissenschaftliche-erklärungsansätze">Sozialwissenschaftliche Erklärungsansätze</h2>
-<h3 id="sozialpsychologische-perspektive-nur-einen-lernen">Sozialpsychologische Perspektive (nur einen lernen)</h3>
+<h2 id="sozialwissenschaftliche-erklärungsansätze-nur-einen-lernen">Sozialwissenschaftliche Erklärungsansätze (nur einen lernen)</h2>
+<h3 id="sozialpsychologische-perspektive">Sozialpsychologische Perspektive</h3>
 <ul>
 <li>&quot;Risky Shift&quot;-Phänomen: In der Gruppe getroffene Entscheidung riskanter
 <ul>
@@ -140,18 +145,6 @@
 <li>Risikobereitschaft als sozialer Wert: Status innerhalb der Gruppe</li>
 </ul></li>
 </ul>
-<h3 id="psychosoziale-perspektive----problem-behavior-theory">Psychosoziale Perspektive -- „Problem-Behavior-Theory“</h3>
-<ul>
-<li>Ursprünge in der sozialen Lerntheorie, Kontrolltheorie und Anomie-Theorie</li>
-<li>Risikoverhalten als missbilligtes, normabweichendes Verhalten</li>
-<li>Begründung auf drei Systeme
-<ol style="list-style-type: decimal">
-<li>Persönlichkeit</li>
-<li>soziales Umfeld</li>
-<li>Verhalten</li>
-</ol></li>
-</ul>
-<h3 id="sozialisationstheoretische-perspektive">Sozialisationstheoretische Perspektive</h3>
 <h2 id="integrative-erkärungsansätze-nur-einen-lernen">Integrative Erkärungsansätze (nur einen lernen)</h2>
 <h3 id="theorie-des-jugendlichen-leichtsinns">Theorie des jugendlichen Leichtsinns</h3>
 <ul>
@@ -529,6 +522,53 @@
 <li>Kleinkinder können ähnlich intensive Bindungen zu Vater und Mutter entwickeln</li>
 <li>Überwindung der natürlichen Exklusivität der Mutter-Kind-Beziehung</li>
 </ul></li>
+<li>systemische Perspektiven (Ende 70er)
+<ul>
+<li>gute Partnerschaft fördert Wohlbefinden der werdenden Mutter</li>
+<li>Nachteil der Phase: Rollenverteilung zu wenig differenziert</li>
+</ul></li>
+<li>integrierter Bestandteil der Familienforschung (seit Beginn 90er)
+<ul>
+<li>Integration der soziologischen Perspektiven in Konstrukten der psychologischen Androgynie</li>
+<li>stark an Erziehung beteiligte Väter können instrumentelle und expressive Funktionen nach Parsons' Rollentheorie haben und zeigen gegenüber Kindern breiteres Verhaltensspektrum als Väter in klassischen Familien</li>
+<li>Kinder engagierter Väter empathischer und strebsamer nach besseren Leistungen und Selbstständigkeit</li>
+<li>Vater- und Mutterrolle nicht mehr mit klassischer Aufteilung zu beschreiben</li>
+</ul></li>
 </ol>
+<h2 id="sechs-offene-forschungsfragen">Sechs offene Forschungsfragen</h2>
+<ol style="list-style-type: decimal">
+<li>Sozialisationsbeitrag eines Vaters, der nicht mit Kind zusammenlebt?</li>
+<li>Bedingungen für positive Förderbeiträge des Vaters?</li>
+<li>Beitrag des Kindes für Engagement des Vaters?</li>
+<li>Bedeutung Stiefväter?</li>
+<li>Veränderung des väterlichen Engagements?</li>
+<li>Genetische Bedingung des väterlichen Betreuungsbeitrags?</li>
+</ol>
+<h2 id="väterliches-engagement">Väterliches Engagement</h2>
+<h3 id="forschungsergebnisse">Forschungsergebnisse</h3>
+<ul>
+<li>Engagement u.a. abhängig von Berufstätigkeit der Mutter, eigener und der Partnerin Geschlechts- und Elternrollenorientierung sowie Partnerzufriedenheit</li>
+<li>stärkeres Engagement bei leiblichen Kindern</li>
+<li>bei sehr kleinen Kindern weniger Einsatz</li>
+<li>am aktivsten im Schulalter, besonders beim Spielen</li>
+<li>Mittelschichtsväter am engagiertesten</li>
+<li>stärker bei Söhnen</li>
+</ul>
+<h3 id="theorieansätze">Theorieansätze</h3>
+<h4 id="new-home-economics-theory">New Home Economics Theory</h4>
+<ul>
+<li>Partner mit höherem Einkommen weniger Zeit für Haushaltstätigkeit -&gt; Maximierung des Haushaltseinkommens</li>
+</ul>
+<h3 id="rollentheoretische-perspektive">Rollentheoretische Perspektive</h3>
+<ul>
+<li>geschlechtsspezifische Sozialisation als Schlüssel zum Verständnis familialer Aufgabenteilung</li>
+<li>traditionelles Rollenverständnis -&gt; traditionellere Rollenteilung</li>
+<li>viel empirische Bestätigung</li>
+</ul>
+<h3 id="familienzyklischer-ansatz">familienzyklischer Ansatz</h3>
+<ul>
+<li>Entwicklung der Familie -&gt; veränderte Anforderungen und Beziehungsmuster</li>
+<li>Erklärung für unterschiedliche väterliche Partizipation in bestimmten Phasen der Familienentwicklung</li>
+</ul>
 </body>
 </html>
