--- a/sammlung.md.html
+++ b/sammlung.md.html
@@ -46,7 +46,7 @@
 <li><a href="#modell">Modell</a></li>
 </ul></li>
 </ul></li>
-<li><a href="#jv----12.1">JV -- 12.1</a><ul>
+<li><a href="#jv-12.1----jugend-und-partizipation">JV 12.1 -- Jugend und Partizipation</a><ul>
 <li><a href="#begriffe">Begriffe</a></li>
 <li><a href="#nutzen-von-partizipativen-handlungsspielräumen-in-bildungseinrichtungen">Nutzen von partizipativen Handlungsspielräumen in Bildungseinrichtungen</a></li>
 <li><a href="#funktion-von-partizipation">Funktion von Partizipation</a></li>
@@ -86,6 +86,13 @@
 <li><a href="#forschungsergebnisse">Forschungsergebnisse</a></li>
 <li><a href="#theorieansätze">Theorieansätze</a></li>
 </ul></li>
+</ul></li>
+<li><a href="#fv-11.1----großeltern">FV 11.1 -- Großeltern</a><ul>
+<li><a href="#rolle-und-funktion">Rolle und Funktion</a></li>
+<li><a href="#historischer-wandel-von-großelternschaft">Historischer Wandel von Großelternschaft</a></li>
+<li><a href="#zukunftstrends">Zukunftstrends</a></li>
+<li><a href="#verändertes-rollenverständnis">verändertes Rollenverständnis</a></li>
+<li><a href="#intergenerativer-leistungstransfer">intergenerativer Leistungstransfer</a></li>
 </ul></li>
 </ul>
 </div>
@@ -240,7 +247,7 @@
 <li>Entstehung und Bewältigung der Diskrepanzen verlaufen abhängig von den sich im Laufe des Lebens verändernden Entwicklungsaufgaben und -voraussetungen des Individuums</li>
 </ul></li>
 </ol>
-<h1 id="jv----12.1">JV -- 12.1</h1>
+<h1 id="jv-12.1----jugend-und-partizipation">JV 12.1 -- Jugend und Partizipation</h1>
 <blockquote>
 <p><em>Was versteht man unter &quot;Partizipation&quot; und &quot;partizipativem Handeln&quot; im Vergleich zu &quot;Kooperation&quot; und &quot;kooperativem Handeln&quot;? Welchen Nutzen haben partizipative Handlungsspielräume in Bildungseinrichtungen? Erläutern Sie, wie Partizipation auf der interaktionalen Ebene &quot;funktioniert&quot;! Beschreiben Sie kurz konsultative Partizipationsformen Heranwachsender!</em></p>
 </blockquote>
@@ -567,6 +574,53 @@
 <ul>
 <li>Entwicklung der Familie -&gt; veränderte Anforderungen und Beziehungsmuster</li>
 <li>Erklärung für unterschiedliche väterliche Partizipation in bestimmten Phasen der Familienentwicklung</li>
+</ul>
+<h1 id="fv-11.1----großeltern">FV 11.1 -- Großeltern</h1>
+<blockquote>
+<p><em>Welche Rolle spielen Großeltern bzw. welche Funktionen erfüllen sie? Gehen Sie auf den historischen Wandel der Bedingungen für Großelternschaft, auf Zukunftstrends und auf das veränderte Rollenverständnis von Großeltern ein! Skizzieren Sie kurz die Formen des intergenerativen Leistungstransfers zwischen Großeltern und Enkeln und beschreiben Sie die Kontextfaktoren, die auf seine Realisierung einwirken!</em></p>
+</blockquote>
+<h2 id="rolle-und-funktion">Rolle und Funktion</h2>
+<ul>
+<li>keine feste Rollendefinition -&gt; keine feste gesellschaftliche Funktion</li>
+<li>Große Verhaltensvariabilität</li>
+<li>Unterstützungsfunktion im Hinblick auf funktionale, spezialisierte Leistungserfüllung durch die Familie</li>
+<li>Unterstützung der Sozialisation von erwachsenen Kindern und Enkeln erwartet</li>
+<li>Selbstzuschreibung der Sozialistationsaufgabe der Enkel</li>
+<li>ergänzend und kompensierend zum Erziehungsauftrag der Eltern</li>
+<li>Doppelte Eltern-Rolle: direkt bei Kindern, latent bei Enkeln</li>
+<li>Elternrolle minderen Rechts, weniger Verantwortung für Enkel + reduzierter Kontakt als Eltern</li>
+<li>Recht auf Umgang mit Enkeln</li>
+</ul>
+<h2 id="historischer-wandel-von-großelternschaft">Historischer Wandel von Großelternschaft</h2>
+<ul>
+<li>steigende Lebenserwartung im 20. Jahrhundert sorgt für Zeit mit Enkeln</li>
+<li>Demographische Entwicklung</li>
+<li>weniger Verbindlichkeit kulturell institutionalisierter Rollenkonzepte</li>
+<li>modernes System staatlicher Vorsorge</li>
+<li>veränderte Bedeutung des Kindes</li>
+<li>Technischer Fortschritt</li>
+<li>Erfahrungsaustausch zwischen Großeltern und Enkeln</li>
+</ul>
+<h2 id="zukunftstrends">Zukunftstrends</h2>
+<ul>
+<li>Bohnenstangenfamilie</li>
+<li>Mehr Einzelkinder von vier Großeltern verwöhnt</li>
+<li>Antieg Kinderlosigkeit, steigenden Anzahl von enkellosen alten Menschen</li>
+</ul>
+<h2 id="verändertes-rollenverständnis">verändertes Rollenverständnis</h2>
+<ul>
+<li>distanziert-respektvolle hierarchisch strukturierte Beziehung -&gt; Wärme, Nähe Zuneigung und Freundschaft</li>
+<li>Gemeinsame Freizeitaktivitäten</li>
+<li>Fehlen direkter Erziehungsverantwortung</li>
+<li>Generationsverhältnis ausgehandelt (Verantwortung, Pflichten, Absprachen)</li>
+</ul>
+<h2 id="intergenerativer-leistungstransfer">intergenerativer Leistungstransfer</h2>
+<ul>
+<li>wechselseitig ausgewogener Austausch immaterieller und materieller Leistungen, z.B. Zeit und Fürsorge</li>
+<li>Kontextfaktoren: staatliche Transferleistungen, gesellschaftliche Normen</li>
+<li>Familie als Solidargemeinschaft in Frage gestellt</li>
+<li>Freiheit und Selbstverwirklichung -&gt; Abneigungen gegenüber langfristiger Verpflichtungen</li>
+<li>materielle Leistungen von oben nach unten</li>
 </ul>
 </body>
 </html>
