--- a/sammlung.md.html
+++ b/sammlung.md.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="de">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Style-Type" content="text/css" />
@@ -92,7 +92,17 @@
 <li><a href="#historischer-wandel-von-großelternschaft">Historischer Wandel von Großelternschaft</a></li>
 <li><a href="#zukunftstrends">Zukunftstrends</a></li>
 <li><a href="#verändertes-rollenverständnis">verändertes Rollenverständnis</a></li>
-<li><a href="#intergenerativer-leistungstransfer">intergenerativer Leistungstransfer</a></li>
+<li><a href="#intergenerativer-leistungstransfer">intergenerativer Leistungstransfer</a><ul>
+<li><a href="#kontextfaktoren">Kontextfaktoren</a></li>
+</ul></li>
+</ul></li>
+<li><a href="#fv-11.2----lebenssituation-der-großeltern">FV 11.2 -- Lebenssituation der Großeltern</a><ul>
+<li><a href="#lebenssituation">Lebenssituation</a></li>
+<li><a href="#generationenkonflikt-nach-mannheim">Generationenkonflikt nach Mannheim</a></li>
+<li><a href="#generationenvertrag">Generationenvertrag</a><ul>
+<li><a href="#kontextfaktoren-1">Kontextfaktoren</a></li>
+<li><a href="#belastungen">Belastungen</a></li>
+</ul></li>
 </ul></li>
 </ul>
 </div>
@@ -616,11 +626,61 @@
 </ul>
 <h2 id="intergenerativer-leistungstransfer">intergenerativer Leistungstransfer</h2>
 <ul>
-<li>wechselseitig ausgewogener Austausch immaterieller und materieller Leistungen, z.B. Zeit und Fürsorge</li>
-<li>Kontextfaktoren: staatliche Transferleistungen, gesellschaftliche Normen</li>
+<li>wechselseitig ausgewogener Austausch immaterieller und materieller Leistungen
+<ul>
+<li>Zeit und Fürsorge</li>
+<li>Materielle Leistungen</li>
+<li>Wissen und Können</li>
+</ul></li>
 <li>Familie als Solidargemeinschaft in Frage gestellt</li>
 <li>Freiheit und Selbstverwirklichung -&gt; Abneigungen gegenüber langfristiger Verpflichtungen</li>
 <li>materielle Leistungen von oben nach unten</li>
+</ul>
+<h3 id="kontextfaktoren">Kontextfaktoren</h3>
+<ul>
+<li>soziodemographische und ökonomische Faktoren</li>
+<li>staatliche Transferleistungen</li>
+<li>Familiäre Ereignisse und familienzyklische Phasen</li>
+</ul>
+<h1 id="fv-11.2----lebenssituation-der-großeltern">FV 11.2 -- Lebenssituation der Großeltern</h1>
+<blockquote>
+<p><em>Beschreiben Sie kurz die Lebenssituation der Großelterngeneration (z.B. Einkommens- und Wohnsituation, Lebenszufriedenheit). Erläutern Sie die (soziologische) Herkunft und den Inhalt der Begriffe &quot;Generation&quot;, &quot;Generationenkonflikt&quot; und &quot;Generationenvertrag&quot;! Welche Einflussfaktoren beeinflussen die intergenerativen Transfers? Wodurch wird der Fortbestand des Generationenvertrags belastet?</em></p>
+</blockquote>
+<h2 id="lebenssituation">Lebenssituation</h2>
+<ul>
+<li>bessere Einkommen, Gesundheit und Bildung als früher</li>
+<li>wenig Armut und Reichtum</li>
+<li>leben fast ausschließlich in Ein-Generationen-Haushalten, aber viele in Drei-Generationen-Netzwerk</li>
+<li>sollen länger in Erwerbsleben eingebunden werden</li>
+<li>kaufkräftige Zielgruppe</li>
+<li>Zufrieden</li>
+</ul>
+<h2 id="generationenkonflikt-nach-mannheim">Generationenkonflikt nach Mannheim</h2>
+<ul>
+<li>Menschen derselben Geburtsjahrägnge (=Generation) machen im selben Sozialraum während des Aufwachsens vergleichbare sozio-politische Erfahrungen -&gt; spezifische soziale Gruppe</li>
+<li>Zugehörigkeit zu Generation beschränkt Mitglieder in Erlebnis- und Chancenverwertungsmöglichkeiten und prädisponiert für Denkweisen -&gt; Einstellungen und Werte können in Konflikt mit älteren Generationen geraten</li>
+</ul>
+<h2 id="generationenvertrag">Generationenvertrag</h2>
+<ul>
+<li>wechselseitige Verpflichtungen und Erwartungen über Austausch zwischen Familienmitgliedern verschiedener Generationen</li>
+<li>drei Arten von Verpflichtungen
+<ol style="list-style-type: decimal">
+<li>Biosoziale Nachfolge: Jede Generation zieht Kinder auf (sozialisation)</li>
+<li>Gerosoziale Nachfolge: Jede Generation stellt zum Aufziehen ihrer Nachkommen ausreichend Ressourcen bereit</li>
+<li>Geriatrische Abhängigkeit: Jede Generation von Nachkommen respektiert und bekommt Hilfe beim Altern und Sterben</li>
+</ol></li>
+</ul>
+<h3 id="kontextfaktoren-1">Kontextfaktoren</h3>
+<ul>
+<li>soziodemographische und ökonomische Faktoren</li>
+<li>staatliche Transferleistungen</li>
+<li>Familiäre Ereignisse und familienzyklische Phasen</li>
+</ul>
+<h3 id="belastungen">Belastungen</h3>
+<ul>
+<li>wachsender Anteil älterer Menschcen</li>
+<li>Pflegenotstand: Defizite der Pflegeversicherung, unzureichende Renten</li>
+<li>Debatte &quot;Generationengerechtigkeit&quot;: Vorwurf, ältere Generationen würden unfairerweise auf Kosten der Jüngeren profitieren</li>
 </ul>
 </body>
 </html>
