Erste vollständige Version

--- a/sammlung.md.html
+++ b/sammlung.md.html
@@ -104,6 +104,16 @@
 <li><a href="#belastungen">Belastungen</a></li>
 </ul></li>
 </ul></li>
+<li><a href="#fv-12.1----jugendhilfe">FV 12.1 -- Jugendhilfe</a><ul>
+<li><a href="#geschichte">Geschichte</a><ul>
+<li><a href="#mittelalter">Mittelalter</a></li>
+<li><a href="#konzeption-von-franckehallesche-anstalten">Konzeption von Francke/Halle'sche Anstalten</a></li>
+<li><a href="#jahrhundert">18. Jahrhundert</a></li>
+<li><a href="#jahrhundert-1">19. Jahrhundert</a></li>
+<li><a href="#jahrhundert-2">20. Jahrhundert</a></li>
+<li><a href="#sozialberichterstattung">Sozialberichterstattung</a></li>
+</ul></li>
+</ul></li>
 </ul>
 </div>
 <h1 id="jv-9.2----risikoverhalten">JV 9.2 -- Risikoverhalten</h1>
@@ -678,9 +688,119 @@
 </ul>
 <h3 id="belastungen">Belastungen</h3>
 <ul>
-<li>wachsender Anteil älterer Menschcen</li>
+<li>demographischer Wandel: wachsender Anteil älterer Menschen</li>
 <li>Pflegenotstand: Defizite der Pflegeversicherung, unzureichende Renten</li>
 <li>Debatte &quot;Generationengerechtigkeit&quot;: Vorwurf, ältere Generationen würden unfairerweise auf Kosten der Jüngeren profitieren</li>
+</ul>
+<h1 id="fv-12.1----jugendhilfe">FV 12.1 -- Jugendhilfe</h1>
+<blockquote>
+<p><em>Skizzieren Sie die Entstehung des Jugendhilfesystems vom Mittelalter bis zum Reichsjugendwohlfahrtsgesetz (1922) und gehen Sie dabei auf markante Meilensteine zur Linderung des Elends und der Bildungsnot von Kindern und Jugendlichen ein! Beschreiben Sie kurz, in welchem Turnus und vom wem die „Kinder- und Jugendberichte“ sowie die „Familienberichte“ der Bundesregierung erarbeitet werden und welche Funktion sie haben!</em></p>
+</blockquote>
+<h2 id="geschichte">Geschichte</h2>
+<h3 id="mittelalter">Mittelalter</h3>
+<ul>
+<li>Bedürftige, Waisen, Findlinge als Zielgruppe christlicher Almosentätigkeit
+<ul>
+<li>&quot;Recht&quot; auf Betteln, später reguliert</li>
+<li>Bettlerkinder von Eltern getrennt und Arbeitsplatz vermittelt</li>
+</ul></li>
+<li>karitatives Hilfesystem -&gt; &quot;Elendsherbergen&quot;</li>
+<li>Spätmittelalter: Findel- und Waisenhäuser entstehen</li>
+</ul>
+<h3 id="konzeption-von-franckehallesche-anstalten">Konzeption von Francke/Halle'sche Anstalten</h3>
+<ul>
+<li>religiöse Erziehung: ausgeprägter Religionsunterricht</li>
+<li>unermüdliche Beschäftigung -&gt; Müßiggang als Sünde</li>
+</ul>
+<h3 id="jahrhundert">18. Jahrhundert</h3>
+<ul>
+<li>Frühe industrielle Revolution: Zuspitzung von Armut und Ausbeutung von Kindern und Jugendlichen -&gt; Regulation um langfristig gesunde Rekruten und Arbeitskräfte zu garantieren</li>
+<li>Preußen: Schulpflicht von 5 bis 12</li>
+<li>Verstaatlichung der Armenpflege
+<ul>
+<li>erste Sozialleistungen</li>
+<li>Strafen bei &quot;Müßiggang&quot; -&gt; z.B. Einweisung ins Arbeitshaus</li>
+</ul></li>
+</ul>
+<h3 id="jahrhundert-1">19. Jahrhundert</h3>
+<ul>
+<li>Schutzbestimmungen für Kinder und Jugendliche unter den schlechten Arbeitsbedingungen (lang, gesundheitsgefährdend)
+<ul>
+<li>Verbot von Kinderarbeit im Bergbau und</li>
+<li>generell unter 10</li>
+</ul></li>
+</ul>
+<h4 id="fröbelsche-kindergärten">Fröbelsche Kindergärten</h4>
+<ul>
+<li>Förderung durch spielbasierte Beschäftigung</li>
+<li>Erziehung als Werk von Familie, Kindergarten und Schule</li>
+</ul>
+<h4 id="rauhes-haus">Rauhes Haus</h4>
+<ul>
+<li>Ersetzung erziehungsunfähiger Familien</li>
+<li>freiwillige Erziehung</li>
+<li>Rückkehroption zu Eltern</li>
+<li>10-12 Kinder + 1 Erzieher</li>
+<li>elementarer Schulunterricht</li>
+</ul>
+<h4 id="elberfelder-system">Elberfelder System</h4>
+<ul>
+<li>Verwaltungsstruktur für Armenpflege
+<ul>
+<li>Bedürftigkeitsprüfung</li>
+<li>Individualisierung der Unterstützungsleistung</li>
+<li>Dezentralisierung der Entscheidungsbefugnisse</li>
+<li>Quartierssystem</li>
+</ul></li>
+<li>kontrollierbare Armenverwaltung mit Rechtsaufsicht:
+<ul>
+<li>ehrenamtlicher Armenpfleger dokumentiert, diagnostiziert und erzieht</li>
+<li>keine Gewährung von Dauerleistungen</li>
+</ul></li>
+</ul>
+<h4 id="reichsverfassung">Reichsverfassung</h4>
+<ul>
+<li>Kinder- und Jugendfürsorge als Kompetenz der Länder</li>
+</ul>
+<h4 id="bismarcksche-sozialgesetze">Bismarcksche Sozialgesetze</h4>
+<ul>
+<li>&quot;Zuckerbrot&quot; für die Arbeiter</li>
+<li>Einführung allgemeiner Sozialversicherungen</li>
+</ul>
+<h3 id="jahrhundert-2">20. Jahrhundert</h3>
+<h4 id="kommunales-straßburger-system">1905 Kommunales Straßburger System</h4>
+<ul>
+<li>Zentralisierung: &quot;Armenamt&quot; mit alleinigen Entscheidungsbefugnissen</li>
+<li>professionelle Armenpfleger</li>
+</ul>
+<h4 id="preußischer-jugendpflegeerlass-für-potentiell-gefährdete-jugendliche">1911 Preußischer Jugendpflegeerlass für potentiell gefährdete Jugendliche</h4>
+<ul>
+<li>Intervention im Interesse der sozialen Integration der neuen Generation</li>
+<li>Fürsorge im Staatsinne: Erziehung zur Normkonformität -&gt; Rekruten</li>
+</ul>
+<h4 id="reichsjugendwohlfahrtsgesetz-1922">Reichsjugendwohlfahrtsgesetz 1922</h4>
+<ul>
+<li>Recht &quot;auf Erziehung zur leiblichen, seelischen und gesellschaftlichen Tüchtigkeit&quot;</li>
+<li>eher Eingriffs- als Leistungsgesetz</li>
+<li>familiäre Erziehung mit öffentlicher Unterstützung -&gt; unabhängig von staatlicher Bevormundung</li>
+<li>aber staatlich kontrolliert und überwacht
+<ul>
+<li>Jugendämter als erste einheitliche kommunale Erziehungsbehörde</li>
+<li>Inkorporation freier Wohlfahrtspflege</li>
+</ul></li>
+<li>Bürokratisierung und Konzentration:
+<ul>
+<li>Schutz von Pflegekindern, Amtsvormundschaft</li>
+<li>Fürsorgeerziehung (Eingriff in elterliche Gewalt)</li>
+<li>Jugendpflege und Fürsorge für Säuglinge und KLeinkinder</li>
+</ul></li>
+</ul>
+<h3 id="sozialberichterstattung">Sozialberichterstattung</h3>
+<p>von Bundesregierung bei Sachverständigenkommission in Auftrag gegeben ####Kinder- und Jugendbericht - jede Legislaturperiode - Bestandsaufnahme, Analyse, Vorschläge zur Weiterentwicklung der Jugendhilfe - jeder dritte Berciht: Überblick über Gesamtsituation der Jugendhilfe</p>
+<h4 id="familienbericht">Familienbericht</h4>
+<ul>
+<li>mindestens jede 2. Legislaturperiode</li>
+<li>mittelfristige Perspektiven erschließen und Handlungsempfehlungen geben</li>
 </ul>
 </body>
 </html>
