Erste vollständige Version

--- a/sammlung.md.html
+++ b/sammlung.md.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="de">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Style-Type" content="text/css" />
@@ -111,7 +111,9 @@
 <li><a href="#jahrhundert">18. Jahrhundert</a></li>
 <li><a href="#jahrhundert-1">19. Jahrhundert</a></li>
 <li><a href="#jahrhundert-2">20. Jahrhundert</a></li>
-<li><a href="#sozialberichterstattung">Sozialberichterstattung</a></li>
+</ul></li>
+<li><a href="#sozialberichterstattung">Sozialberichterstattung</a><ul>
+<li><a href="#familienbericht">Familienbericht</a></li>
 </ul></li>
 </ul></li>
 </ul>
@@ -795,9 +797,9 @@
 <li>Jugendpflege und Fürsorge für Säuglinge und KLeinkinder</li>
 </ul></li>
 </ul>
-<h3 id="sozialberichterstattung">Sozialberichterstattung</h3>
-<p>von Bundesregierung bei Sachverständigenkommission in Auftrag gegeben ####Kinder- und Jugendbericht - jede Legislaturperiode - Bestandsaufnahme, Analyse, Vorschläge zur Weiterentwicklung der Jugendhilfe - jeder dritte Berciht: Überblick über Gesamtsituation der Jugendhilfe</p>
-<h4 id="familienbericht">Familienbericht</h4>
+<h2 id="sozialberichterstattung">Sozialberichterstattung</h2>
+<p>von Bundesregierung bei Sachverständigenkommission in Auftrag gegeben ###Kinder- und Jugendbericht - jede Legislaturperiode - Bestandsaufnahme, Analyse, Vorschläge zur Weiterentwicklung der Jugendhilfe - jeder dritte Berciht: Überblick über Gesamtsituation der Jugendhilfe</p>
+<h3 id="familienbericht">Familienbericht</h3>
 <ul>
 <li>mindestens jede 2. Legislaturperiode</li>
 <li>mittelfristige Perspektiven erschließen und Handlungsempfehlungen geben</li>
