Erste vollständige Version

--- a/sammlung.md.html
+++ b/sammlung.md.html
@@ -113,6 +113,7 @@
 <li><a href="#jahrhundert-2">20. Jahrhundert</a></li>
 </ul></li>
 <li><a href="#sozialberichterstattung">Sozialberichterstattung</a><ul>
+<li><a href="#kinder--und-jugendbericht">Kinder- und Jugendbericht</a></li>
 <li><a href="#familienbericht">Familienbericht</a></li>
 </ul></li>
 </ul></li>
@@ -798,7 +799,13 @@
 </ul></li>
 </ul>
 <h2 id="sozialberichterstattung">Sozialberichterstattung</h2>
-<p>von Bundesregierung bei Sachverständigenkommission in Auftrag gegeben ###Kinder- und Jugendbericht - jede Legislaturperiode - Bestandsaufnahme, Analyse, Vorschläge zur Weiterentwicklung der Jugendhilfe - jeder dritte Berciht: Überblick über Gesamtsituation der Jugendhilfe</p>
+<p>von Bundesregierung bei Sachverständigenkommission in Auftrag gegeben</p>
+<h3 id="kinder--und-jugendbericht">Kinder- und Jugendbericht</h3>
+<ul>
+<li>jede Legislaturperiode</li>
+<li>Bestandsaufnahme, Analyse, Vorschläge zur Weiterentwicklung der Jugendhilfe</li>
+<li>jeder dritte Berciht: Überblick über Gesamtsituation der Jugendhilfe</li>
+</ul>
 <h3 id="familienbericht">Familienbericht</h3>
 <ul>
 <li>mindestens jede 2. Legislaturperiode</li>
