Erste vollständige Version

--- a/sammlung.md.html
+++ b/sammlung.md.html
@@ -527,7 +527,7 @@
 <h3 id="liberalisierungstendenzen">Liberalisierungstendenzen</h3>
 <ul>
 <li>Rangverminderung von Pflicht- und Akzeptanzwerten, Bedeutungsgewinn von Selbstentfaltungswerten</li>
-<li>Liberalisierung der Erziehungskultur (Befehls- -&gt; Verhandlungshaushalt)</li>
+<li>Liberalisierung der Erziehungskultur (Befehls- → Verhandlungshaushalt)</li>
 </ul>
 <h1 id="fv-10.2----väter">FV 10.2 -- Väter</h1>
 <blockquote>
@@ -585,17 +585,17 @@
 <h3 id="theorieansätze">Theorieansätze</h3>
 <h4 id="new-home-economics-theory">New Home Economics Theory</h4>
 <ul>
-<li>Partner mit höherem Einkommen weniger Zeit für Haushaltstätigkeit -&gt; Maximierung des Haushaltseinkommens</li>
+<li>Partner mit höherem Einkommen weniger Zeit für Haushaltstätigkeit → Maximierung des Haushaltseinkommens</li>
 </ul>
 <h4 id="rollentheoretische-perspektive">Rollentheoretische Perspektive</h4>
 <ul>
 <li>geschlechtsspezifische Sozialisation als Schlüssel zum Verständnis familialer Aufgabenteilung</li>
-<li>traditionelles Rollenverständnis -&gt; traditionellere Rollenteilung</li>
+<li>traditionelles Rollenverständnis → traditionellere Rollenteilung</li>
 <li>viel empirische Bestätigung</li>
 </ul>
 <h4 id="familienzyklischer-ansatz">familienzyklischer Ansatz</h4>
 <ul>
-<li>Entwicklung der Familie -&gt; veränderte Anforderungen und Beziehungsmuster</li>
+<li>Entwicklung der Familie → veränderte Anforderungen und Beziehungsmuster</li>
 <li>Erklärung für unterschiedliche väterliche Partizipation in bestimmten Phasen der Familienentwicklung</li>
 </ul>
 <h1 id="fv-11.1----großeltern">FV 11.1 -- Großeltern</h1>
@@ -604,7 +604,7 @@
 </blockquote>
 <h2 id="rolle-und-funktion">Rolle und Funktion</h2>
 <ul>
-<li>keine feste Rollendefinition -&gt; keine feste gesellschaftliche Funktion</li>
+<li>keine feste Rollendefinition → keine feste gesellschaftliche Funktion</li>
 <li>Große Verhaltensvariabilität</li>
 <li>Unterstützungsfunktion im Hinblick auf funktionale, spezialisierte Leistungserfüllung durch die Familie</li>
 <li>Unterstützung der Sozialisation von erwachsenen Kindern und Enkeln erwartet</li>
@@ -632,7 +632,7 @@
 </ul>
 <h2 id="verändertes-rollenverständnis">verändertes Rollenverständnis</h2>
 <ul>
-<li>distanziert-respektvolle hierarchisch strukturierte Beziehung -&gt; Wärme, Nähe Zuneigung und Freundschaft</li>
+<li>distanziert-respektvolle hierarchisch strukturierte Beziehung → Wärme, Nähe Zuneigung und Freundschaft</li>
 <li>Gemeinsame Freizeitaktivitäten</li>
 <li>Fehlen direkter Erziehungsverantwortung</li>
 <li>Generationsverhältnis ausgehandelt (Verantwortung, Pflichten, Absprachen)</li>
@@ -646,7 +646,7 @@
 <li>Wissen und Können</li>
 </ul></li>
 <li>Familie als Solidargemeinschaft in Frage gestellt</li>
-<li>Freiheit und Selbstverwirklichung -&gt; Abneigungen gegenüber langfristiger Verpflichtungen</li>
+<li>Freiheit und Selbstverwirklichung → Abneigungen gegenüber langfristiger Verpflichtungen</li>
 <li>materielle Leistungen von oben nach unten</li>
 </ul>
 <h3 id="kontextfaktoren">Kontextfaktoren</h3>
@@ -670,8 +670,8 @@
 </ul>
 <h2 id="generationenkonflikt-nach-mannheim">Generationenkonflikt nach Mannheim</h2>
 <ul>
-<li>Menschen derselben Geburtsjahrägnge (=Generation) machen im selben Sozialraum während des Aufwachsens vergleichbare sozio-politische Erfahrungen -&gt; spezifische soziale Gruppe</li>
-<li>Zugehörigkeit zu Generation beschränkt Mitglieder in Erlebnis- und Chancenverwertungsmöglichkeiten und prädisponiert für Denkweisen -&gt; Einstellungen und Werte können in Konflikt mit älteren Generationen geraten</li>
+<li>Menschen derselben Geburtsjahrägnge (=Generation) machen im selben Sozialraum während des Aufwachsens vergleichbare sozio-politische Erfahrungen → spezifische soziale Gruppe</li>
+<li>Zugehörigkeit zu Generation beschränkt Mitglieder in Erlebnis- und Chancenverwertungsmöglichkeiten und prädisponiert für Denkweisen → Einstellungen und Werte können in Konflikt mit älteren Generationen geraten</li>
 </ul>
 <h2 id="generationenvertrag">Generationenvertrag</h2>
 <ul>
@@ -707,22 +707,22 @@
 <li>&quot;Recht&quot; auf Betteln, später reguliert</li>
 <li>Bettlerkinder von Eltern getrennt und Arbeitsplatz vermittelt</li>
 </ul></li>
-<li>karitatives Hilfesystem -&gt; &quot;Elendsherbergen&quot;</li>
+<li>karitatives Hilfesystem → &quot;Elendsherbergen&quot;</li>
 <li>Spätmittelalter: Findel- und Waisenhäuser entstehen</li>
 </ul>
 <h3 id="konzeption-von-franckehallesche-anstalten">Konzeption von Francke/Halle'sche Anstalten</h3>
 <ul>
 <li>religiöse Erziehung: ausgeprägter Religionsunterricht</li>
-<li>unermüdliche Beschäftigung -&gt; Müßiggang als Sünde</li>
+<li>unermüdliche Beschäftigung → Müßiggang als Sünde</li>
 </ul>
 <h3 id="jahrhundert">18. Jahrhundert</h3>
 <ul>
-<li>Frühe industrielle Revolution: Zuspitzung von Armut und Ausbeutung von Kindern und Jugendlichen -&gt; Regulation um langfristig gesunde Rekruten und Arbeitskräfte zu garantieren</li>
+<li>Frühe industrielle Revolution: Zuspitzung von Armut und Ausbeutung von Kindern und Jugendlichen → Regulation um langfristig gesunde Rekruten und Arbeitskräfte zu garantieren</li>
 <li>Preußen: Schulpflicht von 5 bis 12</li>
 <li>Verstaatlichung der Armenpflege
 <ul>
 <li>erste Sozialleistungen</li>
-<li>Strafen bei &quot;Müßiggang&quot; -&gt; z.B. Einweisung ins Arbeitshaus</li>
+<li>Strafen bei &quot;Müßiggang&quot; → z.B. Einweisung ins Arbeitshaus</li>
 </ul></li>
 </ul>
 <h3 id="jahrhundert-1">19. Jahrhundert</h3>
@@ -779,13 +779,13 @@
 <h4 id="preußischer-jugendpflegeerlass-für-potentiell-gefährdete-jugendliche">1911 Preußischer Jugendpflegeerlass für potentiell gefährdete Jugendliche</h4>
 <ul>
 <li>Intervention im Interesse der sozialen Integration der neuen Generation</li>
-<li>Fürsorge im Staatsinne: Erziehung zur Normkonformität -&gt; Rekruten</li>
+<li>Fürsorge im Staatsinne: Erziehung zur Normkonformität → Rekruten</li>
 </ul>
 <h4 id="reichsjugendwohlfahrtsgesetz-1922">Reichsjugendwohlfahrtsgesetz 1922</h4>
 <ul>
 <li>Recht &quot;auf Erziehung zur leiblichen, seelischen und gesellschaftlichen Tüchtigkeit&quot;</li>
 <li>eher Eingriffs- als Leistungsgesetz</li>
-<li>familiäre Erziehung mit öffentlicher Unterstützung -&gt; unabhängig von staatlicher Bevormundung</li>
+<li>familiäre Erziehung mit öffentlicher Unterstützung → unabhängig von staatlicher Bevormundung</li>
 <li>aber staatlich kontrolliert und überwacht
 <ul>
 <li>Jugendämter als erste einheitliche kommunale Erziehungsbehörde</li>
